
- Fix for the scroll click suppression (patch #505 - EdorFaus)

- Important speedup of LogViewer (Matthieu Casanova)

- Support for shortcuts to "copy" the error in Error widget (Matthieu Casanova)

- The bufferSwitcher now supports Drag&Drop (patch #3615177 - Yihua Zhang)

- Added "loading" icon for task status bar widget (request #3615068 -
  Matthieu Casanova)

- The TextArea will not scroll anymore when dragging files on jEdit
  (Matthieu Casanova)

- EnhancedDialog instances (Search/Replace, Options, Open) now can be closed
  using a single-key close-buffer.shortcut. (#3613007, #3588892 - László Schmidt,
  Zsombor Franczia, Bence Pintér)

- Plugin dependencies are shown in the plugin manager details pane for all three
  tabs. (#3614465 - Dale Anson)

- Increased the scrolling speed in option pane (Matthieu Casanova)

- In plugin manager's install panel plugin dependencies are unchecked
  if they are not required (Eric Le Lay)

- Use a native splash screen if available (patch #519 - Eric Le Lay)

- Improved layout manager for text area (patch #518 - Dale Anson)

}}}
{{{ Editing

- Patch to toggle word completion of words with digits.
  (#3614607, Patrick Eibl)

- Several fixes for html mode: (Dale Anson/Marc Häfner)
  #504 HTML mode: Fix mode properties in <script> blocks.
  #3850 Html edit mode 
  #3842 HTML syntax highlighting error: & in href 
  #3839 Syntax highlight is wrong for some HTML file 

}}}
{{{ Miscellaneous

- MiscUtilities.expandVariables() converts from Windows to Linux-style paths
  when necessary (the reverse was already true). (Alan Ezust)

- New macros: Go To Offset, Reverse Selection (#3614563, #3614564 Thomas Meyer)

- Removed some no longer needed pre-Java7 MacOSX key handling workaround code 
    (#3615043, #3615044 Makarius, Alan Ezust) 

}}}

}}}

jEdit buffer local properties:
:maxLineLen=90:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: